# QueueSystemSimulator

./: .gitignore  CMakeLists.txt  README.md  Results  main.cpp
docs/: paper.tex
headers/: dist_functions.h  frecuencies.h  globals.h  macros.h  prob.h  prob_tests.h  readers.h  writers.h
src/: dist_functions.cpp  frecuencies.cpp  prob.cpp  prob_tests.cpp  readers.cpp  writers.cpp
